# learnit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: django.yml
learnit/: manage.py
learnit/courses/: admin.py  models.py  tasks.py  urls.py  views.py
learnit/courses/forms/: course_form.py
learnit/courses/migrations/: 0001_initial.py  0002_remove_course_description_course_category_and_more.py  0003_alter_course_update_time_alter_course_upload_time.py  0004_course_slug_alter_category_slug.py  0005_alter_course_upload_time.py  0006_alter_course_update_time_alter_course_upload_time.py  0007_alter_lesson_options_lesson_order.py  0008_lesson_yt_id_alter_lesson_order.py  0009_alter_lesson_order_alter_lesson_yt_id.py  0010_remove_course_update_time.py  0011_rename_yt_id_lesson_video_id_and_more.py  0012_remove_course_upload_time.py  0013_course_description_course_is_published.py  0014_course_thumbnail.py  0015_rename_thumbnail_url_lesson_thumbnail_and_more.py  0016_lesson_duration_alter_lesson_description_and_more.py  0017_remove_lesson_author.py  0018_alter_course_url_alter_lesson_video_id.py  0019_category_parent_category.py  0020_lesson_is_published.py  0021_course_update_date_course_upload_date.py  0022_alter_course_update_date_alter_course_upload_date.py  0023_category_is_published.py  0024_course_author_id_course_modified_date.py  0025_language_code.py  (+5 more)
learnit/learnit/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
learnit/users/: authentication.py  forms.py  urls.py  views.py
(+55 files in other folders)
