[project]
name = "learnit"
version = "0.1.0"
description = ""
authors = [
    {name = "elvin4",email = "elviny.jj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "yt-dlp (>=2025.1.26,<2026.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
django-extensions = "^3.2.3"
ruff = "^0.9.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
